# RunSuiteSparse

./: .gitignore  CMakeLists.txt  CommentsAndQuestions.txt  README.md
eigen_helpers/: CMakeLists.txt
eigen_helpers/include/eigen_helpers/: eigen_io.h  stl_io.h
eigen_helpers/src/: eigen_io.cpp
fs_utils/: CMakeLists.txt
fs_utils/include/fs_utils/: fs_utils.h
fs_utils/src/: fs_utils.cc
include/sparse_qr/: sparse_qr_double.h  sparse_qr_float.h  sparse_system_double.h  sparse_system_float.h
matlab/: README.md  ba_utils  compare_qr.m  compare_qr_matlab.m
src/: compare_qr_double.cc  compare_qr_float.cc  sparse_qr_double.cc  sparse_qr_float.cc  sparse_system_double.cc  sparse_system_float.cc  spqr_user_guide_example.cc
suite_sparse_double/: CMakeLists.txt  README.md
suite_sparse_double/include/sparse_qr/: sparse_system_double.h
suite_sparse_double/src/: compare_qr_double.cc  compare_split_qr.cc  compare_split_qr.cpp  sparse_system_double.cc  test_spqr_double.cc
suite_sparse_float/: CMakeLists.txt  CommentsAndQuestions.txt  README.md  build  data  eigen_helpers  matlab  suite_sparse_double
suite_sparse_float/include/sparse_qr/: sparse_system_float.h  test_android_float.h
suite_sparse_float/src/: compare_qr_float.cc  sparse_system_float.cc  spqr_user_guide_example.cc  test_android_float.cc  test_spqr_float.cc
